--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^3.0.2",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
@@ -26,6 +27,8 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "winston": "^3.17.0",
+    "zod": "^3.24.2"
   }
 }
